// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/unitTesting/assertionsPanel/assertion should render the component as editable with light theme. 1`] = `
<div
  className="msla-workflow-assertion"
>
  <div
    className="msla-workflow-assertion-header"
  >
    <button
      className="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
      data-testid="test-name-assertion-heading-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
      >
        <svg
          aria-hidden={true}
          className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
            fill="currentColor"
          />
        </svg>
      </span>
      test-name
    </button>
    <div
      className="msla-workflow-assertion-header-buttons"
    >
      <button
        aria-label="Delete assertion"
        className="fui-Button r1alrhcs ___1p24v7a_y4hy550 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f1sbtcvk fwiuce9 fdghr9 f15vdbe4 fwbmr0d f44c6la"
        data-testid="assertion-delete-icon-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden={true}
            className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              Object {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              Object {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-workflow-assertion-content"
  >
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-127"
        htmlFor="test-name-name"
      >
        Assertion name
      </label>
      <div
        className="ms-TextField root-129"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-130"
          >
            <input
              aria-invalid={false}
              aria-label="Assertion name"
              className="ms-TextField-field field-131"
              data-testid="test-name-name"
              disabled={false}
              id="test-name-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter name"
              type="text"
              value="test-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-140"
        htmlFor="test-name-description"
      >
        Description
      </label>
      <div
        className="ms-TextField ms-TextField--multiline root-129"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-141"
          >
            <textarea
              aria-invalid={false}
              aria-label="Description"
              className="ms-TextField-field field-142"
              data-testid="test-name-description"
              disabled={false}
              id="test-name-description"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter description"
              value="test-description"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-assertion-condition"
    >
      <label
        className="ms-Label root-127"
        htmlFor="test-name-expression"
      >
        Condition expression
      </label>
      <div
        className="msla-assertion-condition-editor"
      >
        <div
          className="msla-querybuilder-container"
        >
          <div
            className="msla-querybuilder-description"
            tabIndex={0}
          >
            <span>
              Provide the values to compare and select the operator to use.
            </span>
          </div>
          <div
            className="msla-querybuilder-group-container firstGroup"
          >
            <div
              className="msla-querybuilder-group-content firstGroup"
            >
              <div
                className="msla-querybuilder-row-section"
              >
                <div
                  className="msla-querybuilder-group-dropdown-container"
                >
                  <div
                    className="msla-dropdown-editor-container"
                  >
                    <div
                      className="ms-Dropdown-container root-144"
                    >
                      <div
                        aria-disabled={false}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="ms-Dropdown dropdown-145"
                        data-is-focusable={true}
                        data-ktp-target={true}
                        id="Dropdown10"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        role="combobox"
                        tabIndex={0}
                      >
                        <span
                          aria-invalid={false}
                          className="ms-Dropdown-title title-193"
                          id="Dropdown10-option"
                        >
                          AND
                        </span>
                        <span
                          className="ms-Dropdown-caretDownWrapper caretDownWrapper-147"
                        >
                          <i
                            aria-hidden={true}
                            className="ms-Dropdown-caretDown caretDown-165"
                            data-icon-name="ChevronDown"
                          >
                            
                          </i>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="msla-querybuilder-row-container showBorder"
                >
                  <div
                    className="msla-querybuilder-row-gutter-hook"
                  />
                  <div
                    className="msla-querybuilder-row-checkbox msla-checkbox"
                  >
                    <div
                      className="ms-Checkbox is-enabled msla-checkbox-label root-166"
                    >
                      <input
                        aria-disabled={false}
                        checked={false}
                        className="input-167"
                        data-ktp-execute-target={true}
                        disabled={false}
                        id="checkbox-11"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="ms-Checkbox-label label-168"
                        htmlFor="checkbox-11"
                      >
                        <div
                          className="ms-Checkbox-checkbox checkbox-169"
                          data-ktp-target={true}
                        >
                          <i
                            aria-hidden={true}
                            className="ms-Checkbox-checkmark checkmark-172"
                            data-icon-name="CheckMark"
                          >
                            
                          </i>
                        </div>
                      </label>
                    </div>
                  </div>
                  <div
                    className="msla-querybuilder-row-content"
                  >
                    <div
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="msla-querybuilder-row-value-input"
                        id="msla-tokenpicker-callout-location12"
                        title="Choose a value"
                      >
                        <div
                          aria-describedby="msla-described-by-message13"
                          className="editor-input"
                          contentEditable={true}
                          role="textbox"
                          spellCheck={true}
                        />
                        <span
                          className="editor-placeholder"
                        >
                          Choose a value
                        </span>
                        <span
                          hidden={true}
                          id="msla-described-by-message13"
                        >
                          Add dynamic data or expressions by inserting a /
                        </span>
                      </div>
                    </div>
                    <div
                      className="msla-querybuilder-row-dropdown-container"
                    >
                      <div
                        className="msla-dropdown-editor-container"
                      >
                        <div
                          className="ms-Dropdown-container root-173"
                        >
                          <div
                            aria-disabled={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="ms-Dropdown is-disabled dropdown-174"
                            data-is-focusable={false}
                            data-ktp-target={true}
                            id="Dropdown14"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            role="combobox"
                            tabIndex={-1}
                          >
                            <span
                              aria-invalid={false}
                              className="ms-Dropdown-title title-194"
                              id="Dropdown14-option"
                            >
                              is equal to
                            </span>
                            <span
                              className="ms-Dropdown-caretDownWrapper caretDownWrapper-176"
                            >
                              <i
                                aria-hidden={true}
                                className="ms-Dropdown-caretDown caretDown-178"
                                data-icon-name="ChevronDown"
                              >
                                
                              </i>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="msla-querybuilder-row-value-input"
                        id="msla-tokenpicker-callout-location15"
                        title="Choose a value"
                      >
                        <div
                          aria-autocomplete="none"
                          aria-describedby="msla-described-by-message16"
                          aria-readonly={true}
                          className="editor-input readonly"
                          contentEditable={false}
                          role="textbox"
                          spellCheck={true}
                        />
                        <span
                          className="editor-placeholder"
                        >
                          Choose a value
                        </span>
                        <span
                          hidden={true}
                          id="msla-described-by-message16"
                        >
                          Add dynamic data or expressions by inserting a /
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-OverflowSet msla-querybuilder-row-more root-179"
                    role="group"
                  >
                    <div
                      className="ms-OverflowSet-overflowButton overflowButton-181"
                    >
                      <div
                        className="ms-TooltipHost root-182"
                        onBlurCapture={[Function]}
                        onFocusCapture={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        role="none"
                      >
                        <button
                          aria-controls={null}
                          aria-expanded={false}
                          aria-haspopup={true}
                          aria-label="More commands"
                          className="ms-Button ms-Button--icon ms-Button--hasMenu root-183"
                          data-is-focusable={true}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          type="button"
                        >
                          <span
                            className="ms-Button-flexContainer flexContainer-184"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-105 css-164 ms-Button-menuIcon menuIcon-188"
                              data-icon-name="More"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </span>
                        </button>
                        <div
                          hidden={true}
                          id="tooltip17"
                          style={
                            Object {
                              "border": 0,
                              "height": 1,
                              "margin": -1,
                              "overflow": "hidden",
                              "padding": 0,
                              "position": "absolute",
                              "whiteSpace": "nowrap",
                              "width": 1,
                            }
                          }
                        >
                          More commands
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="msla-querybuilder-row-add-container"
                >
                  <div
                    className="msla-querybuilder-row-gutter-hook"
                  />
                  <button
                    aria-controls={null}
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="ms-Button ms-Button--default ms-Button--hasMenu root-191"
                    data-is-focusable={true}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-184"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-105 css-164 ms-Button-icon icon-186"
                        data-icon-name="Add"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                      <span
                        className="ms-Button-textContainer textContainer-185"
                      >
                        <span
                          className="ms-Button-label label-192"
                          id="id__21"
                        >
                          New item
                        </span>
                      </span>
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-105 css-164 ms-Button-menuIcon menuIcon-188"
                        data-icon-name="ChevronDown"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="msla-querybuilder-group-controlbar"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ui/unitTesting/assertionsPanel/assertion should render the component as no editable with dark theme. 1`] = `
<div
  className="msla-workflow-assertion"
>
  <div
    className="msla-workflow-assertion-header"
  >
    <button
      className="fui-Button r1alrhcs ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
      data-testid="test-name-assertion-heading-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
      >
        <svg
          aria-hidden={true}
          className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
      test-name
    </button>
    <div
      className="msla-workflow-assertion-header-buttons"
    >
      <button
        aria-label="Edit assertion"
        className="fui-Button r1alrhcs ___1p24v7a_y4hy550 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f1sbtcvk fwiuce9 fdghr9 f15vdbe4 fwbmr0d f44c6la"
        data-testid="assertion-edit-icon-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden={true}
            className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              Object {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.9 3.05a3.58 3.58 0 1 1 5.05 5.06l-.89.9L15 3.93l.9-.9ZM13.93 5l-10 10c-.4.4-.7.92-.82 1.48l-1.1 4.6a.75.75 0 0 0 .9.9l4.6-1.1A3.1 3.1 0 0 0 9 20.07l10-10L13.94 5Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              Object {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20.95 3.05a3.58 3.58 0 0 0-5.06 0L3.94 15c-.4.4-.7.92-.82 1.48l-1.1 4.6a.75.75 0 0 0 .9.9l4.6-1.1A3.1 3.1 0 0 0 9 20.07L20.95 8.11a3.58 3.58 0 0 0 0-5.06Zm-4 1.06a2.08 2.08 0 1 1 2.94 2.94l-.89.89L16.06 5l.9-.9ZM15 6.06 17.94 9l-10 10a1.6 1.6 0 0 1-.76.43l-3.42.8.82-3.4c.06-.3.21-.56.42-.77l10-10Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-workflow-assertion-content"
  >
    <div
      className="msla-assertion-field"
    />
    <div
      className="msla-assertion-field"
    >
      <span
        className="msla-assertion-field-read-only css-195"
      >
        test-description
      </span>
    </div>
    <div
      className="msla-assertion-condition"
    >
      <div
        className="msla-assertion-condition-editor"
      />
    </div>
  </div>
</div>
`;

exports[`ui/unitTesting/assertionsPanel/assertion should render the component with validation errors and error traffic light dot 1`] = `
<div
  className="msla-workflow-assertion"
>
  <div
    className="msla-workflow-assertion-header"
  >
    <button
      className="fui-Button r1alrhcs ___1p24v7a_y4hy550 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f1sbtcvk fwiuce9 fdghr9 f15vdbe4 fwbmr0d f44c6la"
      data-testid="-assertion-heading-button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="fui-Button__icon rywnvv2"
      >
        <svg
          aria-hidden={true}
          className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.22 8.47c.3-.3.77-.3 1.06 0L12 15.19l6.72-6.72a.75.75 0 1 1 1.06 1.06l-7.25 7.25c-.3.3-.77.3-1.06 0L4.22 9.53a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
          />
        </svg>
        <svg
          aria-hidden={true}
          className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.3 8.3a1 1 0 0 1 1.4 0l6.3 6.29 6.3-6.3a1 1 0 1 1 1.4 1.42l-7 7a1 1 0 0 1-1.4 0l-7-7a1 1 0 0 1 0-1.42Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
    <span
      className="msla-assertion-error-dot"
    >
      <svg
        fill="none"
        height="8"
        viewBox="0 0 8 8"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#A4262C"
          height="8"
          rx="4"
          width="8"
        />
      </svg>
    </span>
    <div
      className="msla-workflow-assertion-header-buttons"
    >
      <button
        aria-label="Delete assertion"
        className="fui-Button r1alrhcs ___1p24v7a_y4hy550 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f1sbtcvk fwiuce9 fdghr9 f15vdbe4 fwbmr0d f44c6la"
        data-testid="assertion-delete-icon-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <svg
            aria-hidden={true}
            className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              Object {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9a.75.75 0 0 0-.75.75v7.5a.75.75 0 0 0 1.5 0v-7.5a.75.75 0 0 0-.75-.75Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden={true}
            className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            style={
              Object {
                "color": "var(--colorBrandForeground1)",
              }
            }
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 5h4a2 2 0 1 0-4 0ZM8.5 5a3.5 3.5 0 1 1 7 0h5.75a.75.75 0 0 1 0 1.5h-1.32l-1.17 12.11A3.75 3.75 0 0 1 15.03 22H8.97a3.75 3.75 0 0 1-3.73-3.39L4.07 6.5H2.75a.75.75 0 0 1 0-1.5H8.5Zm2 4.75a.75.75 0 0 0-1.5 0v7.5a.75.75 0 0 0 1.5 0v-7.5ZM14.25 9c.41 0 .75.34.75.75v7.5a.75.75 0 0 1-1.5 0v-7.5c0-.41.34-.75.75-.75Zm-7.52 9.47a2.25 2.25 0 0 0 2.24 2.03h6.06c1.15 0 2.12-.88 2.24-2.03L18.42 6.5H5.58l1.15 11.97Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    className="msla-workflow-assertion-content"
  >
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-127"
        htmlFor="-name"
      >
        Assertion name
      </label>
      <div
        className="ms-TextField root-129"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-196"
          >
            <input
              aria-describedby="TextFieldDescription25"
              aria-invalid={true}
              aria-label="Assertion name"
              className="ms-TextField-field field-131"
              data-testid="-name"
              disabled={false}
              id="-name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter name"
              type="text"
              value=""
            />
          </div>
        </div>
        <span
          id="TextFieldDescription25"
        >
          <div
            role="alert"
          />
        </span>
      </div>
    </div>
    <div
      className="msla-assertion-field"
    >
      <label
        className="ms-Label root-140"
        htmlFor="-description"
      >
        Description
      </label>
      <div
        className="ms-TextField ms-TextField--multiline root-129"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-141"
          >
            <textarea
              aria-invalid={false}
              aria-label="Description"
              className="ms-TextField-field field-142"
              data-testid="-description"
              disabled={false}
              id="-description"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder="Enter description"
              value="test-description"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-assertion-condition"
    >
      <label
        className="ms-Label root-127"
        htmlFor="-expression"
      >
        Condition expression
      </label>
      <div
        className="msla-assertion-condition-editor"
      >
        <div
          className="msla-querybuilder-container"
        >
          <div
            className="msla-querybuilder-description"
            tabIndex={0}
          >
            <span>
              Provide the values to compare and select the operator to use.
            </span>
          </div>
          <div
            className="msla-querybuilder-group-container firstGroup"
          >
            <div
              className="msla-querybuilder-group-content firstGroup"
            >
              <div
                className="msla-querybuilder-row-section"
              >
                <div
                  className="msla-querybuilder-group-dropdown-container"
                >
                  <div
                    className="msla-dropdown-editor-container"
                  >
                    <div
                      className="ms-Dropdown-container root-144"
                    >
                      <div
                        aria-disabled={false}
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        className="ms-Dropdown dropdown-145"
                        data-is-focusable={true}
                        data-ktp-target={true}
                        id="Dropdown34"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        role="combobox"
                        tabIndex={0}
                      >
                        <span
                          aria-invalid={false}
                          className="ms-Dropdown-title title-193"
                          id="Dropdown34-option"
                        >
                          AND
                        </span>
                        <span
                          className="ms-Dropdown-caretDownWrapper caretDownWrapper-147"
                        >
                          <i
                            aria-hidden={true}
                            className="ms-Dropdown-caretDown caretDown-165"
                            data-icon-name="ChevronDown"
                          >
                            
                          </i>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="msla-querybuilder-row-container showBorder"
                >
                  <div
                    className="msla-querybuilder-row-gutter-hook"
                  />
                  <div
                    className="msla-querybuilder-row-checkbox msla-checkbox"
                  >
                    <div
                      className="ms-Checkbox is-enabled msla-checkbox-label root-166"
                    >
                      <input
                        aria-disabled={false}
                        checked={false}
                        className="input-167"
                        data-ktp-execute-target={true}
                        disabled={false}
                        id="checkbox-35"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="ms-Checkbox-label label-168"
                        htmlFor="checkbox-35"
                      >
                        <div
                          className="ms-Checkbox-checkbox checkbox-169"
                          data-ktp-target={true}
                        >
                          <i
                            aria-hidden={true}
                            className="ms-Checkbox-checkmark checkmark-172"
                            data-icon-name="CheckMark"
                          >
                            
                          </i>
                        </div>
                      </label>
                    </div>
                  </div>
                  <div
                    className="msla-querybuilder-row-content"
                  >
                    <div
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="msla-querybuilder-row-value-input"
                        id="msla-tokenpicker-callout-location36"
                        title="Choose a value"
                      >
                        <div
                          aria-describedby="msla-described-by-message37"
                          className="editor-input"
                          contentEditable={true}
                          role="textbox"
                          spellCheck={true}
                        />
                        <span
                          className="editor-placeholder"
                        >
                          Choose a value
                        </span>
                        <span
                          hidden={true}
                          id="msla-described-by-message37"
                        >
                          Add dynamic data or expressions by inserting a /
                        </span>
                      </div>
                    </div>
                    <div
                      className="msla-querybuilder-row-dropdown-container"
                    >
                      <div
                        className="msla-dropdown-editor-container"
                      >
                        <div
                          className="ms-Dropdown-container root-173"
                        >
                          <div
                            aria-disabled={true}
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            className="ms-Dropdown is-disabled dropdown-174"
                            data-is-focusable={false}
                            data-ktp-target={true}
                            id="Dropdown38"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onClick={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            role="combobox"
                            tabIndex={-1}
                          >
                            <span
                              aria-invalid={false}
                              className="ms-Dropdown-title title-194"
                              id="Dropdown38-option"
                            >
                              is equal to
                            </span>
                            <span
                              className="ms-Dropdown-caretDownWrapper caretDownWrapper-176"
                            >
                              <i
                                aria-hidden={true}
                                className="ms-Dropdown-caretDown caretDown-178"
                                data-icon-name="ChevronDown"
                              >
                                
                              </i>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "width": "100%",
                        }
                      }
                    >
                      <div
                        className="msla-querybuilder-row-value-input"
                        id="msla-tokenpicker-callout-location39"
                        title="Choose a value"
                      >
                        <div
                          aria-describedby="msla-described-by-message40"
                          className="editor-input"
                          contentEditable={true}
                          role="textbox"
                          spellCheck={true}
                        />
                        <span
                          className="editor-placeholder"
                        >
                          Choose a value
                        </span>
                        <span
                          hidden={true}
                          id="msla-described-by-message40"
                        >
                          Add dynamic data or expressions by inserting a /
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-OverflowSet msla-querybuilder-row-more root-179"
                    role="group"
                  >
                    <div
                      className="ms-OverflowSet-overflowButton overflowButton-181"
                    >
                      <div
                        className="ms-TooltipHost root-182"
                        onBlurCapture={[Function]}
                        onFocusCapture={[Function]}
                        onKeyDown={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        role="none"
                      >
                        <button
                          aria-controls={null}
                          aria-expanded={false}
                          aria-haspopup={true}
                          aria-label="More commands"
                          className="ms-Button ms-Button--icon ms-Button--hasMenu root-183"
                          data-is-focusable={true}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          type="button"
                        >
                          <span
                            className="ms-Button-flexContainer flexContainer-184"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-105 css-164 ms-Button-menuIcon menuIcon-188"
                              data-icon-name="More"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </span>
                        </button>
                        <div
                          hidden={true}
                          id="tooltip41"
                          style={
                            Object {
                              "border": 0,
                              "height": 1,
                              "margin": -1,
                              "overflow": "hidden",
                              "padding": 0,
                              "position": "absolute",
                              "whiteSpace": "nowrap",
                              "width": 1,
                            }
                          }
                        >
                          More commands
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="msla-querybuilder-row-add-container"
                >
                  <div
                    className="msla-querybuilder-row-gutter-hook"
                  />
                  <button
                    aria-controls={null}
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="ms-Button ms-Button--default ms-Button--hasMenu root-191"
                    data-is-focusable={true}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-184"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-105 css-164 ms-Button-icon icon-186"
                        data-icon-name="Add"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                      <span
                        className="ms-Button-textContainer textContainer-185"
                      >
                        <span
                          className="ms-Button-label label-192"
                          id="id__45"
                        >
                          New item
                        </span>
                      </span>
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-105 css-164 ms-Button-menuIcon menuIcon-188"
                        data-icon-name="ChevronDown"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
              </div>
              <div
                className="msla-querybuilder-group-controlbar"
              />
            </div>
          </div>
        </div>
        <span
          className="msla-input-parameter-error"
          role="alert"
        >
          Enter a valid condition statement.
        </span>
      </div>
    </div>
  </div>
</div>
`;
